[FIX] sap.m.RadioButton: focus outline is now correctly aligned with wrapping
SNOW: DINC0684542

--- a/src/sap.m/src/sap/m/themes/base/RadioButton.less
+++ b/src/sap.m/src/sap/m/themes/base/RadioButton.less
@@ -29,6 +29,7 @@
 
 .sapMRb.sapMRbWrapped {
 	height: auto;
+	min-height: 2.75rem;
 }
 
 .sapMILI-CTX .sapMRb {
@@ -116,13 +117,6 @@
 	pointer-events: none;
 }
 
-.sapMRbHasLabel.sapMRb.sapMRbWrapped:focus::before {
-	bottom: 0.375rem;
-	top: 0.375rem;
-	left: 0.375rem;
-	right: 0;
-}
-
 .sapMRbB .sapMRbBInn {
 	transform: translate(0.675rem, 0.675rem);
 	stroke: transparent;
@@ -205,6 +199,7 @@
 
 	.sapMRb.sapMRbWrapped {
 		height: auto;
+		min-height: 2rem;
 	}
 
 	.sapMRbSvg {
@@ -258,7 +253,7 @@
 	}
 
 	.sapMRbHasLabel.sapMRb.sapMRbWrapped:focus::before {
-		bottom: 0;
+		bottom: 0.25rem;
 		top: 0.25rem;
 		left: 0.25rem;
 	}
